# harebrain

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  MUTATION_EXEMPTIONS.md  README.md  edd.html  game-ai.html  harebrain.html  harel.html  mebn-prowl.html  mpl.html  mpl.md  sbir_idea.md
.github/workflows/: audits.yml  mutation.yml  nightly.yml  pr.yml  subprocess.yml
.nwave/: trusted-source-domains.yaml
docs/edd/: edd.md
docs/feature/.archive/wumpus-classic-2026-05-20/discuss/: journey-play-classic-wumpus-visual.md  outcome-kpis.md  user-stories.md  wave-decisions.md
docs/feature/wumpus/: feature-delta.md
docs/feature/wumpus-classic/discuss/: dor-validation.md  journey-play-classic-wumpus.yaml  shared-artifacts-registry.md  story-map.md
docs/feature/wumpus/deliver/mutation/: cosmic-ray.toml  mutation-report.md
docs/feature/wumpus/play-sessions/: README.md  seed1973-win.jsonl  seed1973-win.txt
docs/harebrain/: harebrain.md
docs/harel/: harel.md
docs/llm-modulo/: llm-modulo.md
docs/mebn-prowl/: mebn-prowl.md
docs/product/: jobs.yaml  kpi-contracts.yaml  vision.md
docs/product/architecture/: brief.md
docs/product/journeys/: play-classic-wumpus-visual.md  play-classic-wumpus.yaml
docs/research/agents/: llm-modulo-benchmark-portability-deep-dive.md  llm-modulo-benchmarks-as-supplements-deep-dive.md  long-horizon-agent-benchmarks-deep-dive.md  phase-i-task-design-deep-dive.md  phase-ii-task-design-deep-dive.md  shadow-strike-as-benchmark-medium.md
docs/wumpus_idea/: wumpus_idea.md
docs/wumpus_idea/experiments/: pure_llm_trust.md
docs/wumpus_idea/experiments/g_wild_baseline/: README.md  patches.diff  wumpus.bas
game-ai/: game-ai.md
harebrain/: harebrain.md
mpl/: mpl.md
python/: README.md  pyproject.toml
sbir_idea/: sbir_idea.md
wumpus/: README.md  pyproject.toml  wumpus_idea.md
wumpus/docs/: wumpus_conversation.md  wumpus_idea.md  wumpus_python_goals.md
wumpus/experiments/g_wild_baseline/: README.md  wumpus.gwbasic.bas
