[project]
name = "harebrain-python"
version = "0.0.0"
description = "Workspace root for harebrain Python experiments."
requires-python = ">=3.11"
dependencies = [
    "hello_world",
    "wumpus",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
hello_world = { workspace = true }
wumpus = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-bdd>=7",
    "pytest-cov>=5",
    "hypothesis>=6",
    "jsonschema>=4",
    "mypy>=1.11",
    "ruff>=0.6",
    # Mutation testing uses cosmic-ray installed as a uv tool (not a project
    # dep) — see CLAUDE.md § Mutation Testing Strategy. Previously "mutmut>=2.5"
    # here; removed 2026-05-28 (see CLAUDE.md for the why).
    # R1-S09 subprocess smoke harnesses. pexpect is the POSIX driver
    # (Linux/macOS); wexpect is the Windows fork. The CI matrix runs
    # each on its native OS; both are dev-only.
    "pexpect>=4.9 ; sys_platform != 'win32'",
    "wexpect>=4.0 ; sys_platform == 'win32'",
    # wexpect imports `pkg_resources` (legacy setuptools API) at module
    # load time but does not declare it as a runtime dependency. Force
    # setuptools in the dev group on Windows so the import succeeds.
    # See `[REF] Wave Decisions` L4 — wexpect-on-Windows is known finicky.
    "setuptools>=68 ; sys_platform == 'win32'",
]

[tool.pytest.ini_options]
testpaths = ["packages"]
markers = [
    "slow: tests that load the embedding model or run the full pipeline (~90 MB download on first run)",
    "acceptance: BDD acceptance tests (Outside-In TDD; one .feature per release)",
    "property: property-based tests (hypothesis-driven; expensive in nightly profile)",
    "audit: static-analysis audits (surface-leak, determinism-source, module-state, snapshot-serializability)",
]
