[project]
name = "harebrain-wumpus"
version = "0.1.0"
authors = [
    { name = "Phil VanEvery", email = "pvanevery@intaptai.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.103.1",
    "python-dotenv>=1.2.2",
    "setuptools<81", # wexpect 4.0.0 imports pkg_resources, removed in setuptools 81
    "wexpect>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
